[package]
name = "daachorse"
version = "1.0.0-rc.1"
edition = "2021"
rust-version = "1.60"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
]
description = "Daachorse: Double-Array Aho-Corasick"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/daachorse"
repository = "https://github.com/daac-tools/daachorse"
readme = "README.md"
keywords = ["search", "text", "aho", "multi", "double-array"]
categories = ["text-processing", "algorithms", "data-structures", "no-std"]
exclude = [".*"]

[dependencies]

[dev-dependencies]

[features]
default = ["alloc"]

alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "bench",
    "daacfind",
]
