[package]
name = "daachorse"

# This library adheres to Semantic Versioning.
# See: https://semver.org/
version = "4.0.0"

# Bumping the MSRV breaks backward compatibility. If you bump it, please increment the major version
# of the library as well.
rust-version = "1.77"
edition = "2021"

authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
]
description = "Daachorse: Double-Array Aho-Corasick"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/daachorse"
repository = "https://github.com/daac-tools/daachorse"
readme = "README.md"
keywords = ["search", "text", "aho-corasick", "multi", "double-array"]
categories = ["text-processing", "algorithms", "data-structures", "no-std"]
exclude = [".*"]

[dependencies]

[dev-dependencies]

[features]
default = ["alloc"]

alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
