[package]
name = "daachorse-bench"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]
aho-corasick = "0.7"  # Unlicense or MIT
criterion = { version = "0.3", features = ["html_reports"] }  # Apache-2.0 or MIT
daachorse = { path = ".." }  # Apache-2.0 or MIT
yada = "0.4"
fst = "0.4"

[[bench]]
name = "benchmark"
harness = false
